--- a/templates/result.html
+++ b/templates/result.html
@@ -12,7 +12,7 @@
                         <p>{{post.0}}</p>
                     </div>
                     <div class="card-action">
-                        <a href="{{post.1}}">View listing: Price</a>
+                        <a href="{{post.1}}">View listing: Price{{post.3}}</a>
                     </div>
                 </div>
             </div>
